// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`tab-web-platform pages/Courses/CourseCategoryMenu Custom List 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body
    class="sb-show-nopreview"
  >
    <div>
      <div
        class="grid grid-cols-3 md:grid-cols-10 text-dark-secondary text-sm border-b border-gray-2"
      >
        <a
          class="flex flex-row items-center justify-center py-6 px-4 border-b-2 border-transparent hover:border-gray-3"
          href="/courses?category=Electronics"
        >
          <img
            alt="Category: Electronics"
            class="w-4 h-4 text-gray"
            data-nimg="1"
            decoding="async"
            height="16"
            loading="lazy"
            src="/img.jpg"
            style="color: transparent;"
            width="16"
          />
          <span
            class="p-2 text-gray"
          >
            Electronics
          </span>
        </a>
        <a
          class="flex flex-row items-center justify-center py-6 px-4 border-b-2 border-transparent hover:border-gray-3"
          href="/courses?category=Hydraulics"
        >
          <img
            alt="Category: Hydraulics"
            class="w-4 h-4 text-gray"
            data-nimg="1"
            decoding="async"
            height="16"
            loading="lazy"
            src="/img.jpg"
            style="color: transparent;"
            width="16"
          />
          <span
            class="p-2 text-gray"
          >
            Hydraulics
          </span>
        </a>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="grid grid-cols-3 md:grid-cols-10 text-dark-secondary text-sm border-b border-gray-2"
    >
      <a
        class="flex flex-row items-center justify-center py-6 px-4 border-b-2 border-transparent hover:border-gray-3"
        href="/courses?category=Electronics"
      >
        <img
          alt="Category: Electronics"
          class="w-4 h-4 text-gray"
          data-nimg="1"
          decoding="async"
          height="16"
          loading="lazy"
          src="/img.jpg"
          style="color: transparent;"
          width="16"
        />
        <span
          class="p-2 text-gray"
        >
          Electronics
        </span>
      </a>
      <a
        class="flex flex-row items-center justify-center py-6 px-4 border-b-2 border-transparent hover:border-gray-3"
        href="/courses?category=Hydraulics"
      >
        <img
          alt="Category: Hydraulics"
          class="w-4 h-4 text-gray"
          data-nimg="1"
          decoding="async"
          height="16"
          loading="lazy"
          src="/img.jpg"
          style="color: transparent;"
          width="16"
        />
        <span
          class="p-2 text-gray"
        >
          Hydraulics
        </span>
      </a>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`tab-web-platform pages/Courses/CourseCategoryMenu Index 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body
    class="sb-show-nopreview"
  >
    <div>
      <div
        class="grid grid-cols-3 md:grid-cols-10 text-dark-secondary text-sm border-b border-gray-2"
      >
        <a
          class="flex flex-row items-center justify-center py-6 px-4 border-b-2 border-blue-0"
          href="/courses"
        >
          <img
            alt="Category: Electrical"
            class="w-4 h-4 text-blue-0"
            data-nimg="1"
            decoding="async"
            height="16"
            loading="lazy"
            src="/img.jpg"
            style="color: transparent;"
            width="16"
          />
          <span
            class="p-2 text-blue-0"
          >
            Electrical
          </span>
        </a>
        <a
          class="flex flex-row items-center justify-center py-6 px-4 border-b-2 border-transparent hover:border-gray-3"
          href="/courses?category=Hydraulics"
        >
          <img
            alt="Category: Hydraulics"
            class="w-4 h-4 text-gray"
            data-nimg="1"
            decoding="async"
            height="16"
            loading="lazy"
            src="/img.jpg"
            style="color: transparent;"
            width="16"
          />
          <span
            class="p-2 text-gray"
          >
            Hydraulics
          </span>
        </a>
        <a
          class="flex flex-row items-center justify-center py-6 px-4 border-b-2 border-transparent hover:border-gray-3"
          href="/courses?category=Mechatronics"
        >
          <img
            alt="Category: Mechatronics"
            class="w-4 h-4 text-gray"
            data-nimg="1"
            decoding="async"
            height="16"
            loading="lazy"
            src="/img.jpg"
            style="color: transparent;"
            width="16"
          />
          <span
            class="p-2 text-gray"
          >
            Mechatronics
          </span>
        </a>
        <a
          class="flex flex-row items-center justify-center py-6 px-4 border-b-2 border-transparent hover:border-gray-3"
          href="/courses?category=Occupations"
        >
          <img
            alt="Category: Occupations"
            class="w-4 h-4 text-gray"
            data-nimg="1"
            decoding="async"
            height="16"
            loading="lazy"
            src="/img.jpg"
            style="color: transparent;"
            width="16"
          />
          <span
            class="p-2 text-gray"
          >
            Occupations
          </span>
        </a>
        <a
          class="flex flex-row items-center justify-center py-6 px-4 border-b-2 border-transparent hover:border-gray-3"
          href="/courses?category=Onboarding"
        >
          <img
            alt="Category: Onboarding"
            class="w-4 h-4 text-gray"
            data-nimg="1"
            decoding="async"
            height="16"
            loading="lazy"
            src="/img.jpg"
            style="color: transparent;"
            width="16"
          />
          <span
            class="p-2 text-gray"
          >
            Onboarding
          </span>
        </a>
        <a
          class="flex flex-row items-center justify-center py-6 px-4 border-b-2 border-transparent hover:border-gray-3"
          href="/courses?category=Pneumatics"
        >
          <img
            alt="Category: Pneumatics"
            class="w-4 h-4 text-gray"
            data-nimg="1"
            decoding="async"
            height="16"
            loading="lazy"
            src="/img.jpg"
            style="color: transparent;"
            width="16"
          />
          <span
            class="p-2 text-gray"
          >
            Pneumatics
          </span>
        </a>
        <a
          class="flex flex-row items-center justify-center py-6 px-4 border-b-2 border-transparent hover:border-gray-3"
          href="/courses?category=Vacuum"
        >
          <img
            alt="Category: Vacuum"
            class="w-4 h-4 text-gray"
            data-nimg="1"
            decoding="async"
            height="16"
            loading="lazy"
            src="/img.jpg"
            style="color: transparent;"
            width="16"
          />
          <span
            class="p-2 text-gray"
          >
            Vacuum
          </span>
        </a>
        <a
          class="flex flex-row items-center justify-center py-6 px-4 border-b-2 border-transparent hover:border-gray-3"
          href="/courses?category=Workmanship"
        >
          <img
            alt="Category: Workmanship"
            class="w-4 h-4 text-gray"
            data-nimg="1"
            decoding="async"
            height="16"
            loading="lazy"
            src="/img.jpg"
            style="color: transparent;"
            width="16"
          />
          <span
            class="p-2 text-gray"
          >
            Workmanship
          </span>
        </a>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="grid grid-cols-3 md:grid-cols-10 text-dark-secondary text-sm border-b border-gray-2"
    >
      <a
        class="flex flex-row items-center justify-center py-6 px-4 border-b-2 border-blue-0"
        href="/courses"
      >
        <img
          alt="Category: Electrical"
          class="w-4 h-4 text-blue-0"
          data-nimg="1"
          decoding="async"
          height="16"
          loading="lazy"
          src="/img.jpg"
          style="color: transparent;"
          width="16"
        />
        <span
          class="p-2 text-blue-0"
        >
          Electrical
        </span>
      </a>
      <a
        class="flex flex-row items-center justify-center py-6 px-4 border-b-2 border-transparent hover:border-gray-3"
        href="/courses?category=Hydraulics"
      >
        <img
          alt="Category: Hydraulics"
          class="w-4 h-4 text-gray"
          data-nimg="1"
          decoding="async"
          height="16"
          loading="lazy"
          src="/img.jpg"
          style="color: transparent;"
          width="16"
        />
        <span
          class="p-2 text-gray"
        >
          Hydraulics
        </span>
      </a>
      <a
        class="flex flex-row items-center justify-center py-6 px-4 border-b-2 border-transparent hover:border-gray-3"
        href="/courses?category=Mechatronics"
      >
        <img
          alt="Category: Mechatronics"
          class="w-4 h-4 text-gray"
          data-nimg="1"
          decoding="async"
          height="16"
          loading="lazy"
          src="/img.jpg"
          style="color: transparent;"
          width="16"
        />
        <span
          class="p-2 text-gray"
        >
          Mechatronics
        </span>
      </a>
      <a
        class="flex flex-row items-center justify-center py-6 px-4 border-b-2 border-transparent hover:border-gray-3"
        href="/courses?category=Occupations"
      >
        <img
          alt="Category: Occupations"
          class="w-4 h-4 text-gray"
          data-nimg="1"
          decoding="async"
          height="16"
          loading="lazy"
          src="/img.jpg"
          style="color: transparent;"
          width="16"
        />
        <span
          class="p-2 text-gray"
        >
          Occupations
        </span>
      </a>
      <a
        class="flex flex-row items-center justify-center py-6 px-4 border-b-2 border-transparent hover:border-gray-3"
        href="/courses?category=Onboarding"
      >
        <img
          alt="Category: Onboarding"
          class="w-4 h-4 text-gray"
          data-nimg="1"
          decoding="async"
          height="16"
          loading="lazy"
          src="/img.jpg"
          style="color: transparent;"
          width="16"
        />
        <span
          class="p-2 text-gray"
        >
          Onboarding
        </span>
      </a>
      <a
        class="flex flex-row items-center justify-center py-6 px-4 border-b-2 border-transparent hover:border-gray-3"
        href="/courses?category=Pneumatics"
      >
        <img
          alt="Category: Pneumatics"
          class="w-4 h-4 text-gray"
          data-nimg="1"
          decoding="async"
          height="16"
          loading="lazy"
          src="/img.jpg"
          style="color: transparent;"
          width="16"
        />
        <span
          class="p-2 text-gray"
        >
          Pneumatics
        </span>
      </a>
      <a
        class="flex flex-row items-center justify-center py-6 px-4 border-b-2 border-transparent hover:border-gray-3"
        href="/courses?category=Vacuum"
      >
        <img
          alt="Category: Vacuum"
          class="w-4 h-4 text-gray"
          data-nimg="1"
          decoding="async"
          height="16"
          loading="lazy"
          src="/img.jpg"
          style="color: transparent;"
          width="16"
        />
        <span
          class="p-2 text-gray"
        >
          Vacuum
        </span>
      </a>
      <a
        class="flex flex-row items-center justify-center py-6 px-4 border-b-2 border-transparent hover:border-gray-3"
        href="/courses?category=Workmanship"
      >
        <img
          alt="Category: Workmanship"
          class="w-4 h-4 text-gray"
          data-nimg="1"
          decoding="async"
          height="16"
          loading="lazy"
          src="/img.jpg"
          style="color: transparent;"
          width="16"
        />
        <span
          class="p-2 text-gray"
        >
          Workmanship
        </span>
      </a>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
